--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,14 @@
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".MainActivity"/>
         <activity android:name=".chat.ChatActivity"/>
-
         <activity android:name=".profile.ProfileActivity"/>
-
         <activity android:name=".main.SubActivity"/>
-
-        <activity android:name=".setting.SetActivity"/>
+        <activity android:name=".environment_setting.SetActivity"/>
 
     </application>
 
