--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".chat.ChatActivity"/>
-        <activity android:name=".profile.ProfileActivity"/>
-        <activity android:name=".main.SubActivity"/>
-        <activity android:name=".environment_setting.SetActivity"/>
-
+        <activity android:name=".MainActivity" />
+        <activity android:name=".chat.ChatActivity" />
+        <activity android:name=".profile.ProfileActivity" />
+        <activity android:name=".main.SubActivity" />
+        <activity android:name=".environment_setting.SetActivity" />
+        <activity android:name=".profile.MyPage"></activity>
     </application>
 
 </manifest>
