채팅 리스트 리싸이클러뷰에 각 아이템 리스너 연결 / 채팅방 메인 매니페스트 파일에 등록 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".profile.ProfileActivity"/>
         <activity android:name=".main.SubActivity"/>
         <activity android:name=".environment_setting.SetActivity"/>
-        <activity android:name=".profile.MyPage"></activity>
+        <activity android:name=".profile.MyPage"/>
+        <activity android:name=".chat.ChatMainActivity"/>
 
     </application>
 
