채팅리스트뷰 외곽선 색깔제거, 회원정보입력창 서버 등록하다가 말았음.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity android:name=".environment_setting.SetActivity"/>
         <activity android:name=".profile.MyPage"/>
         <activity android:name=".chat.ChatMainActivity"/>
-
+        <!--<activity android:name=".LoginActivity"/>-->
     </application>
 
 </manifest>
