거주지 Spinner -> EditText로 변경 / 네아로 api 셋팅

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,15 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.nhn.android.naverlogin.ui.OAuthLoginActivity"
+
+            />
+        <activity android:name="com.nhn.android.naverlogin.ui.OAuthLoginInAppBrowserActivity"
+            android:label="OAuth2.0 In-app"/>
 
         <activity android:name=".MainActivity"/>
         <activity android:name=".chatList.ChatListActivity"/>
