--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,5 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:26.1.0'
 
-    compile 'com.google.code.gson:gson:2.3.1'
+    implementation 'com.google.code.gson:gson:2.3.1'
 }
