--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,14 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
 
     implementation 'com.android.support:recyclerview-v7:26.1.0'
-    compile files('libs/naveridlogin_android_sdk_4.2.0.aar')
+    implementation files('libs/naveridlogin_android_sdk_4.2.0.aar')
 
-    compile 'com.android.support:support-core-utils:26.1.0'
-    compile 'com.android.support:customtabs:26.1.0'
-    compile 'com.android.support:support-v4:26.1.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+
+    implementation 'com.android.support:support-core-utils:26.1.0'
+    implementation 'com.android.support:customtabs:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
 
     implementation 'com.google.code.gson:gson:2.3.1'
 }
