--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,18 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:allowBackup="true"
+        android:name=".AppDevApplication"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+
+        <meta-data android:name="android.max_aspect" android:value="2.1" />
+
+        <activity android:name=".LoginActivity"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,15 +27,23 @@
         <activity android:name="com.nhn.android.naverlogin.ui.OAuthLoginActivity"
 
             />
-        <activity android:name="com.nhn.android.naverlogin.ui.OAuthLoginInAppBrowserActivity"
-            android:label="OAuth2.0 In-app"/>
 
-        <activity android:name=".chatList.ChatListActivity"/>
-        <activity android:name=".profile.ProfileActivity"/>
-        <activity android:name=".main.SubActivity"/>
-        <activity android:name=".environment_setting.SetActivity"/>
-        <activity android:name=".profile.MyPage"/>
-        <activity android:name=".chat.ChatMainActivity"/>
+        <activity android:name="com.nhn.android.naverlogin.ui.OAuthLoginInAppBrowserActivity"
+            android:label="OAuth2.0 In-app"
+                  android:screenOrientation="portrait"/>
+
+        <activity android:name=".chatList.ChatListActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".profile.ProfileActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".main.SubActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".environment_setting.SetActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".profile.MyPage"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".chat.ChatMainActivity"
+                  android:screenOrientation="portrait"/>
         <!--<activity android:name=".LoginActivity"/>-->
     </application>
 
