--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.prograpy.app2.appdev2">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,23 +15,21 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.nhn.android.naverlogin.ui.OAuthLoginActivity"
-
-            />
-        <activity android:name="com.nhn.android.naverlogin.ui.OAuthLoginInAppBrowserActivity"
-            android:label="OAuth2.0 In-app"/>
-
-        <activity android:name=".chatList.ChatListActivity"/>
-        <activity android:name=".profile.ProfileActivity"/>
-        <activity android:name=".main.SubActivity"/>
-        <activity android:name=".environment_setting.SetActivity"/>
-        <activity android:name=".profile.MyPage"/>
-        <activity android:name=".chat.ChatMainActivity"/>
-        <!--<activity android:name=".LoginActivity"/>-->
+        <activity android:name="com.nhn.android.naverlogin.ui.OAuthLoginActivity" />
+        <activity
+            android:name="com.nhn.android.naverlogin.ui.OAuthLoginInAppBrowserActivity"
+            android:label="OAuth2.0 In-app" />
+        <activity android:name=".chatList.ChatListActivity" />
+        <activity android:name=".profile.ProfileActivity" />
+        <activity android:name=".main.SubActivity" />
+        <activity android:name=".environment_setting.SetActivity" />
+        <activity android:name=".profile.MyPage" />
+        <activity android:name=".chat.ChatMainActivity" />
+        <!-- <activity android:name=".LoginActivity"/> -->
+        <activity android:name=".environment_setting.SettingAppVersion" />
     </application>
 
 </manifest>
