--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,10 @@ dependencies {
     implementation 'com.android.support:customtabs:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
 
+    implementation 'com.google.firebase:firebase-core:16.0.0'
+    implementation 'com.google.firebase:firebase-messaging:17.1.0'
+
     implementation 'com.google.code.gson:gson:2.3.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
