--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,17 @@
         <activity android:name=".chat.ChatMainActivity"
                   android:screenOrientation="portrait"/>
         <activity android:name=".environment_setting.SettingAppVersion" />
-</application>
+
+        <service
+            android:name=".FireBaseMessagingService"
+            android:enabled="true"
+            android:exported="true"
+            android:stopWithTask="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+    </application>
 
 </manifest>
