--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:17.1.0'
 
     implementation 'com.google.code.gson:gson:2.3.1'
+
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
