--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
                   android:screenOrientation="portrait"/>
         <activity android:name=".profile.ProfileActivity"
                   android:screenOrientation="portrait"/>
-        <activity android:name=".main.SubActivity"
+        <activity android:name=".main.MainActivity"
                   android:screenOrientation="portrait"/>
         <activity android:name=".environment_setting.SetActivity"
                   android:screenOrientation="portrait"/>
