--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
         <activity android:name=".chatList.ChatListActivity"
                   android:screenOrientation="portrait"/>
 
-        <activity android:name=".profile.ProfileActivity"
+        <activity android:name=".profile.JoinActivity"
                   android:screenOrientation="portrait"/>
 
         <activity android:name=".main.MainActivity"
