메인 뷰페이져 + 탭 방식으로 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,19 +46,19 @@
             android:label="OAuth2.0 In-app"
                   android:screenOrientation="portrait"/>
 
-        <activity android:name=".chatList.ChatListActivity"
+        <activity android:name=".chatList.ChatListFragment"
                   android:screenOrientation="portrait"/>
 
         <activity android:name=".profile.ProfileActivity"
                   android:screenOrientation="portrait"/>
 
-        <activity android:name=".main.MainActivity"
+        <activity android:name=".main.MatchFragment"
                   android:screenOrientation="portrait"/>
 
         <activity android:name=".environment_setting.SetActivity"
                   android:screenOrientation="portrait"/>
 
-        <activity android:name=".profile.MyPage"
+        <activity android:name=".profile.MyPageFragment"
                   android:screenOrientation="portrait"/>
 
         <activity android:name=".chat.ChatMainActivity"
