--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,8 @@
         <activity android:name=".environment_setting.SetActivity"
                   android:screenOrientation="portrait"/>
 
+        <activity android:name=".main.MainActivity"
+                  android:screenOrientation="portrait"/>
 
         <activity android:name=".chat.ChatMainActivity"
                   android:screenOrientation="portrait"
