--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
                 android:resource="@xml/provider_paths"/>
         </provider>
 
-        <activity android:name=".LoginActivity"
+        <activity android:name=".IntroActivity"
                   android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,14 +38,13 @@
             </intent-filter>
         </activity>
         
-        <activity android:name="com.nhn.android.naverlogin.ui.OAuthLoginActivity"
-
-            />
+        <activity android:name="com.nhn.android.naverlogin.ui.OAuthLoginActivity" />
 
         <activity android:name="com.nhn.android.naverlogin.ui.OAuthLoginInAppBrowserActivity"
             android:label="OAuth2.0 In-app"
                   android:screenOrientation="portrait"/>
 
+        <activity android:name=".LoginActivity"/>
 
         <activity android:name=".profile.JoinActivity"
                   android:screenOrientation="portrait"/>
