--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,8 +54,7 @@
             android:name=".chat.ChatMainActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".environment_setting.SendMail"/>
-        <activity android:name=".environment_setting.SettingAppVersion"/>
+        <activity android:name=".setting.SendMail"/>
 
         <service
             android:name=".FireBaseMessagingService"
