--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,12 +49,19 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".main.MainActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing"/>
         <activity
             android:name=".chat.ChatMainActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".setting.SendMail"/>
+
+        <activity android:name=".setting.SendMail"
+                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="adjustNothing"/>
+
+        <activity android:name=".profile.ProvisionActivity"
+                  android:screenOrientation="portrait"/>
 
         <service
             android:name=".FireBaseMessagingService"
