--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:name=".AppDevApplication"
         android:allowBackup="false"
         android:icon="@mipmap/icon"
-        android:label="Milotic"
+        android:label="MILOTIC"
         android:roundIcon="@mipmap/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
